--- a/OllamaCodeAssistant/OllamaCodeAssistant.csproj
+++ b/OllamaCodeAssistant/OllamaCodeAssistant.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OllamaCodeAssistantPackage.cs" />
+    <Compile Include="TextSelectionListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -70,6 +71,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
