--- a/OllamaCodeAssistant/OllamaCodeAssistant.csproj
+++ b/OllamaCodeAssistant/OllamaCodeAssistant.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ChatToolWindowControl.xaml.cs">
       <DependentUpon>ChatToolWindowControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DETService.cs" />
     <Compile Include="Options\OllamaOptionsControl.xaml.cs">
       <DependentUpon>OllamaOptionsControl.xaml</DependentUpon>
     </Compile>
@@ -58,6 +59,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ProjectContextHelper.cs" />
+    <Compile Include="PromptManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OllamaCodeAssistantPackage.cs" />
     <Compile Include="TextSelectionListener.cs" />
@@ -84,9 +86,6 @@
   <ItemGroup>
     <PackageReference Include="FontAwesome.WPF">
       <Version>4.7.0.9</Version>
-    </PackageReference>
-    <PackageReference Include="Markdig">
-      <Version>0.41.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Build">
       <Version>17.14.8</Version>
