--- a/OllamaCodeAssistant/OllamaCodeAssistant.csproj
+++ b/OllamaCodeAssistant/OllamaCodeAssistant.csproj
@@ -62,6 +62,7 @@
     <Compile Include="PromptManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OllamaCodeAssistantPackage.cs" />
+    <Compile Include="OllamaAsyncQuickInfoSourceProvider.cs" />
     <Compile Include="TextSelectionListener.cs" />
   </ItemGroup>
   <ItemGroup>
