Allow selecting model from main UI

--- a/OllamaCodeAssistant/OllamaCodeAssistant.csproj
+++ b/OllamaCodeAssistant/OllamaCodeAssistant.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="DETService.cs" />
     <Compile Include="LLMInteractionManager.cs" />
+    <Compile Include="OllamaManager.cs" />
     <Compile Include="Options\OllamaOptionsControl.xaml.cs">
       <DependentUpon>OllamaOptionsControl.xaml</DependentUpon>
     </Compile>
