--- a/OllamaCodeAssistant/OllamaCodeAssistant.csproj
+++ b/OllamaCodeAssistant/OllamaCodeAssistant.csproj
@@ -52,6 +52,8 @@
       <DependentUpon>ChatToolWindowControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="DETService.cs" />
+    <Compile Include="InlineSuggestionAdornment.cs" />
+    <Compile Include="InlineSuggestionAdornmentFactory.cs" />
     <Compile Include="LLMInteractionManager.cs" />
     <Compile Include="OllamaManager.cs" />
     <Compile Include="OllamaAsyncQuickInfoSource.cs" />
@@ -67,6 +69,7 @@
     <Compile Include="OllamaCodeAssistantPackage.cs" />
     <Compile Include="OllamaAsyncQuickInfoSourceProvider.cs" />
     <Compile Include="TextSelectionListener.cs" />
+    <Compile Include="TextViewEventListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
